--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -14,6 +14,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-  background-color: antiquewhite;
+    margin-bottom: 60px;
+    background-image: url('../../wwwroot/pilt/barber.jpg');
 }
