--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -31,16 +31,16 @@
                     <ul class="navbar-nav flex-grow-1">  
                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tootajas" asp-action="Index">Tootajas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tootajas" asp-action="Index">Tootajad</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teenus" asp-action="Index">Teenus</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Teenus" asp-action="Index">Teenused</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tellimus" asp-action="Index">Tellimus</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tellimus" asp-action="Index">Tellimused</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Kasutajas" asp-action="Index">Kasutajas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kasutajas" asp-action="Index">Kasutajad</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Ettevõttest</a>
