--- a/WebApplication1/Views/Tellimus/Index.cshtml
+++ b/WebApplication1/Views/Tellimus/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <!DOCTYPE html>
-<h1>Tellimus</h1>
+<h1>Tellimused</h1>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
