--- a/WebApplication1/Views/Kasutajas/Index.cshtml
+++ b/WebApplication1/Views/Kasutajas/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <!DOCTYPE html>
-<h1>Kasutajas</h1>
+<h1>Kasutajasd</h1>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
